# leptos-sweetalert

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  index.html
example/: Cargo.toml  index.html
example/src/: main.rs
src/: Swal.rs  lib.rs  main.rs  swal_dismiss_reason.rs  swal_icon.rs  swal_options.rs  swal_result.rs  tests.rs
styles/: sweetalert-core.scss  variables.scss
