workspace = { members = ["example"] }

[package]
name = "leptos_sweetalert"
version = "1.0.1"
edition = "2021"
license = "MIT"
description = "An unofficial remake of SweetAlert for the Leptos web framework"
authors = ["ThomasGysemans<support@sciencesky.fr>"]
repository = "https://github.com/ThomasGysemans/leptos_sweetalert"
readme = "README.md"
keywords = ["leptos", "swal", "sweetalert", "modal", "popup"]
categories = ["wasm", "web-programming"]

[dependencies]
leptos = { version = "0.6.11", features = ["csr"] }
